--- a/data_handler.ipynb
+++ b/data_handler.ipynb
@@ -9,7 +9,10 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "import time"
+    "import time\n",
+    "\n",
+    "# Link to data to be extracted to path pointed by dir\n",
+    "# https://archive.ics.uci.edu/ml/datasets/mhealth+dataset"
    ]
   },
   {
@@ -23,18 +26,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(869387, 250)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dir = Path(\"raw_data_opp\")\n",
-    "data_ext=\".dat\"\n",
+    "dir = Path(\"raw_data\")\n",
+    "data_ext=\".log\"\n",
     "\n",
     "t1s = time.time();\n",
     "li = None\n",
@@ -42,25 +37,19 @@
     "# appropriate extension\n",
     "for file in dir.glob('**/*'+data_ext):\n",
     "    # read each file\n",
-    "    # data = pd.read_csv(file, delimiter='\\t', header=None).values\n",
-    "    # eliminate null data\n",
+    "    data = pd.read_csv(file, delimiter='\\t', header=None).values\n",
     "    # and create a big list in memory\n",
-    "    data = np.loadtxt(file,dtype='float32', unpack = True)\n",
-    "    # if li is None:\n",
-    "    #     li = data[data[:,-1]!=0,:]\n",
-    "    # else:\n",
-    "    #     li = np.hstack((li,data[data[-1,:]!=0,:]))\n",
     "    if li is None:\n",
     "        li = data\n",
     "    else:\n",
-    "        li = np.hstack((li,data))\n",
+    "        li = np.vstack((li,data))\n",
     "\n",
     "# separate data from labels\n",
-    "li = li.T\n",
-    "print(li.shape)\n",
-    "labels = li[:, 245].astype(int)\n",
-    "data = li[labels!=0, :102]\n",
-    "labels=labels[labels!=0]\n",
+    "labels = li[:, 23].astype(int)\n",
+    "\n",
+    "# eliminate null data\n",
+    "data = li[labels!=0, :23]\n",
+    "labels = labels[labels!=0]\n",
     "\n",
     "t1e = time.time();"
    ]
@@ -74,35 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(147590,)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.max(labels[labels!=0])\n",
-    "labels[labels!=0].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working:  99.99% \\\n",
+      "Working:  99.98% /\n",
       "\n"
      ]
     }
@@ -113,7 +81,7 @@
     "# Window size\n",
     "WINDOW_SIZE = 10\n",
     "# Stride\n",
-    "STRIDE = 10\n",
+    "STRIDE = 100\n",
     "t2s=time.time();\n",
     "windows = None\n",
     "window_labels = None\n",
@@ -141,10 +109,9 @@
     "        windows = np.vstack((windows,data_slice))\n",
     "    # print(windows.shape)\n",
     "    # Label stacking\n",
-    "    l = np.zeros(13)\n",
+    "    l = np.zeros(12)\n",
     "    for j in labels[i:i+WINDOW_SIZE]:\n",
-    "        j-=201\n",
-    "        l[j]+=1\n",
+    "        l[j-1]+=1\n",
     "    if window_labels is None:\n",
     "        window_labels = l.argmax()\n",
     "    else:\n",
@@ -167,30 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "dir = Path(\"data\")\n",
-    "np.savetxt(dir/\"data_opp_all.csv\", handled_data, delimiter=\",\")"
+    "np.savetxt(dir/\"data_all.csv\", handled_data, delimiter=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5832, 1021)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "handled_data.shape"
    ]
