added some new things

--- a/data_handler.ipynb
+++ b/data_handler.ipynb
@@ -9,10 +9,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
-    "import time\n",
-    "\n",
-    "# Link to data to be extracted to path pointed by dir\n",
-    "# https://archive.ics.uci.edu/ml/datasets/mhealth+dataset"
+    "import time"
    ]
   },
   {
@@ -28,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir = Path(\"raw_data\")\n",
+    "dir = Path(\"MHEALTHDATASET/\")\n",
     "data_ext=\".log\"\n",
     "\n",
     "t1s = time.time();\n",
@@ -63,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working:  99.98% /\n",
+      "Working:  99.98% \\\n",
       "\n"
      ]
     }
@@ -134,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,9 +141,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3432, 231)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "handled_data.shape"
    ]
@@ -168,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4,
   "vscode": {
