Working code again

--- a/data_handler.ipynb
+++ b/data_handler.ipynb
@@ -67,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working:  99.98% \\\n",
+      "Working:  99.98% |\n",
       "\n"
      ]
     }
