--- a/data_handler.ipynb
+++ b/data_handler.ipynb
@@ -67,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working:  99.98% |\n",
+      "Working:  99.99% /\n",
       "\n"
      ]
     }
@@ -76,9 +76,9 @@
     "\n",
     "# Define the window size and the stride\n",
     "# Window size\n",
-    "WINDOW_SIZE = 10\n",
+    "WINDOW_SIZE = 50\n",
     "# Stride\n",
-    "STRIDE = 100\n",
+    "STRIDE = 50\n",
     "t2s=time.time();\n",
     "windows = None\n",
     "window_labels = None\n",
@@ -147,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "(3432, 231)"
+       "(6863, 1151)"
       ]
      },
      "execution_count": 5,
