--- a/data_handler.ipynb
+++ b/data_handler.ipynb
@@ -23,7 +23,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(122112, 24)\n",
+      "(343195, 23)\n"
+     ]
+    }
+   ],
    "source": [
     "dir = Path(\"MHEALTHDATASET/\")\n",
     "data_ext=\".log\"\n",
@@ -45,7 +54,10 @@
     "labels = li[:, 23].astype(int)\n",
     "\n",
     "# eliminate null data\n",
+    "print(data.shape)\n",
     "data = li[labels!=0, :23]\n",
+    "print(data.shape)\n",
+    "\n",
     "labels = labels[labels!=0]\n",
     "\n",
     "t1e = time.time();"
@@ -67,7 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working:  99.99% /\n",
+      "Working: 100.00% /\n",
       "\n"
      ]
     }
@@ -76,9 +88,9 @@
     "\n",
     "# Define the window size and the stride\n",
     "# Window size\n",
-    "WINDOW_SIZE = 50\n",
+    "WINDOW_SIZE = 5\n",
     "# Stride\n",
-    "STRIDE = 50\n",
+    "STRIDE = 10\n",
     "t2s=time.time();\n",
     "windows = None\n",
     "window_labels = None\n",
@@ -135,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir = Path(\"data\")\n",
+    "dir = Path(\"data_new\")\n",
     "np.savetxt(dir/\"data_all.csv\", handled_data, delimiter=\",\")"
    ]
   },
@@ -147,7 +159,7 @@
     {
      "data": {
       "text/plain": [
-       "(6863, 1151)"
+       "(34319, 116)"
       ]
      },
      "execution_count": 5,
