--- a/data_handler.ipynb
+++ b/data_handler.ipynb
@@ -81,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working: 100.00% /\n",
+      "Working: 100.00% \\\n",
       "\n"
      ]
     }
@@ -90,9 +90,9 @@
     "\n",
     "# Define the window size and the stride\n",
     "# Window size\n",
-    "WINDOW_SIZE = 5\n",
+    "WINDOW_SIZE = 20\n",
     "# Stride\n",
-    "STRIDE = 10\n",
+    "STRIDE = 15\n",
     "t2s=time.time();\n",
     "windows = None\n",
     "window_labels = None\n",
@@ -110,9 +110,9 @@
     "    if np.isnan(data_slice).any():\n",
     "        continue\n",
     "    # # Data normalisation\n",
-    "    # data_slice = ((data_slice-data_slice.min(axis=0))/(data_slice.max(axis=0) - data_slice.min(axis=0))).flatten()\n",
-    "    # if np.isnan(data_slice).any():\n",
-    "    #     continue\n",
+    "    data_slice = ((data_slice-data_slice.mean(axis=0))/(data_slice.std(axis=0))).flatten()\n",
+    "    if np.isnan(data_slice).any():\n",
+    "        continue\n",
     "\n",
     "    if windows is None:\n",
     "        windows = data_slice\n",
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir = Path(\"data_new\")\n",
+    "dir = Path(\"data\")\n",
     "np.savetxt(dir/\"data_all.csv\", handled_data, delimiter=\",\")"
    ]
   },
@@ -162,7 +162,7 @@
     {
      "data": {
       "text/plain": [
-       "(34319, 116)"
+       "(22879, 461)"
       ]
      },
      "execution_count": 5,
