--- a/data_handler.ipynb
+++ b/data_handler.ipynb
@@ -29,20 +29,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[PosixPath('MHEALTHDATASET/mHealth_subject9.log'), PosixPath('MHEALTHDATASET/mHealth_subject2.log'), PosixPath('MHEALTHDATASET/mHealth_subject5.log'), PosixPath('MHEALTHDATASET/mHealth_subject7.log'), PosixPath('MHEALTHDATASET/mHealth_subject8.log'), PosixPath('MHEALTHDATASET/mHealth_subject6.log'), PosixPath('MHEALTHDATASET/mHealth_subject4.log'), PosixPath('MHEALTHDATASET/mHealth_subject10.log'), PosixPath('MHEALTHDATASET/mHealth_subject1.log'), PosixPath('MHEALTHDATASET/mHealth_subject3.log')]\n",
       "(122112, 24)\n",
-      "(343195, 23)\n"
+      "(35380, 23)\n"
      ]
     }
    ],
    "source": [
     "dir = Path(\"MHEALTHDATASET/\")\n",
     "data_ext=\".log\"\n",
-    "\n",
+    "person = 9\n",
     "t1s = time.time();\n",
     "li = None\n",
     "# Get all files in the data directory with\n",
     "# appropriate extension\n",
-    "for file in dir.glob('**/*'+data_ext):\n",
+    "data_raw = list(dir.glob('**/*'+data_ext))\n",
+    "print(data_raw)\n",
+    "data_raw = [data_raw[person]]\n",
+    "\n",
+    "for file in data_raw:\n",
     "    # read each file\n",
     "    data = pd.read_csv(file, delimiter='\\t', header=None).values\n",
     "    # and create a big list in memory\n",
@@ -81,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working: 100.00% \\\n",
+      "Working:  99.99% \\\n",
       "\n"
      ]
     }
@@ -151,7 +156,8 @@
    "outputs": [],
    "source": [
     "dir = Path(\"data\")\n",
-    "np.savetxt(dir/\"data_all.csv\", handled_data, delimiter=\",\")"
+    "s = \"data_\"+str(person)+\"_std.csv\"\n",
+    "np.savetxt(dir/s, handled_data, delimiter=\",\")"
    ]
   },
   {
@@ -162,7 +168,7 @@
     {
      "data": {
       "text/plain": [
-       "(22879, 461)"
+       "(2358, 461)"
       ]
      },
      "execution_count": 5,
